<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_name_label"/>
    <TextView
        android:id="@+id/dataview1"
        android:layout_toRightOf="@id/textview1"
        android:layout_marginLeft="36dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_name_label"/>
    <TextView
        android:id="@+id/textview2"
        android:layout_below="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_mass_label"/>
    <TextView
        android:id="@+id/dataview2"
        android:layout_below="@id/dataview1"
        android:layout_alignStart="@id/dataview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_mass_label"/>
    <TextView
        android:id="@+id/textview3"
        android:layout_below="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_gravity_label"/>
    <TextView
        android:id="@+id/dataview3"
        android:layout_below="@id/dataview2"
        android:layout_alignStart="@id/dataview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_mass_label"/>
    <TextView
        android:id="@+id/textview4"
        android:layout_below="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_colonies_label"/>
    <TextView
        android:id="@+id/dataview4"
        android:layout_below="@id/dataview3"
        android:layout_alignStart="@id/dataview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_mass_label"/>
    <TextView
        android:id="@+id/textview5"
        android:layout_below="@+id/textview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_population_label"/>
    <TextView
        android:id="@+id/dataview5"
        android:layout_below="@id/dataview4"
        android:layout_alignStart="@id/dataview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_mass_label"/>
    <TextView
        android:id="@+id/textview6"
        android:layout_below="@+id/textview5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_military_label"/>
    <TextView
        android:id="@+id/dataview6"
        android:layout_below="@id/dataview5"
        android:layout_alignStart="@id/dataview5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_mass_label"/>
    <TextView
        android:id="@+id/textview7"
        android:layout_below="@+id/textview6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_bases_label"/>
    <TextView
        android:id="@+id/dataview7"
        android:layout_below="@id/dataview6"
        android:layout_alignStart="@id/dataview6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_mass_label"/>
    <TextView
        android:id="@+id/textview8"
        android:layout_below="@+id/textview7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_forcefield_label"/>
    <TextView
        android:id="@+id/dataview8"
        android:layout_below="@id/dataview7"
        android:layout_alignStart="@id/dataview7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/planet_mass_label"/>
</RelativeLayout>